docs: fixing filtering paramns on api documentation
